--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
     "react-spinners": "^0.10.6",
+    "react-toastify": "^7.0.3",
     "redux": "^4.0.5",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^1.1.0"
